@@ -50,6 +50,7 @@ module NewRelic
     require 'new_relic/transaction_analysis'
     require 'new_relic/transaction_sample'
     require 'new_relic/noticed_error'
+    require 'new_relic/histogram'
     
     require 'new_relic/agent/chained_call'
     require 'new_relic/agent/agent'
