@@ -123,7 +123,11 @@ module NewRelic
     
     ###################################
     # Agent config conveniences
-    
+
+    def apdex_t
+      # Always initialized with a default
+      fetch('apdex_t').to_f
+    end
     def license_key
       fetch('license_key')
     end
