@@ -1,4 +1,7 @@
 v2.10.0
+  * collect histogram statistics
+  * add custom parameters to newrelic_notice_error call to display
+    extra info for errors
   * add method disable_all_tracing(&block) to execute a block without
     capturing metrics
   * newrelic_ignore now blocks all instrumentation collection for
